--- a/sales.html
+++ b/sales.html
@@ -7,6 +7,35 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h2>Seattle</h2>
+        <ul class="seattleOutput">  
+        </ul>
+    </div>
+    <div>
+        <h2>Tokyo</h2>
+        <ul class="tokyoOutput">  
+        </ul>
+    </div>
+    <div>
+        <h2>Dubai</h2>
+        <ul class="dubaiOutput">  
+        </ul>
+    </div>
+
+<div>
+    <h2>Paris</h2>
+    <ul class="parisOutput"></ul>
+</div>
+
+<div>
+    <h2>Lima</h2>
+    <ul class="limaOutput">  
+    </ul>
+    <ul class="totalCookies"></ul>
+
+</div>
+
+<script src="app.js"></script>
 </body>
 </html>
