--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Salmon Cookies</h1>
+    <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="Fish displayed horizontally with its mouth open colors salmon pink and burnt orange.">
+   
+
     
 </body>
 </html>
