Fixed bugs, added CSS

--- a/sales.html
+++ b/sales.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div>
         <h2>Seattle</h2>
-        <ul class="seattleOutput">  
+        <ul class="seattleOutput">
         </ul>
+        <ul class="totalCookies4"></ul>
     </div>
     <div>
         <h2>Tokyo</h2>
-        <ul class="tokyoOutput">  
+        <ul class="tokyoOutput">
         </ul>
+        <ul class="totalCookies3"></ul>
     </div>
     <div>
         <h2>Dubai</h2>
-        <ul class="dubaiOutput">  
+        <ul class="dubaiOutput">
         </ul>
+        <ul class="totalCookies2"></ul>
     </div>
 
-<div>
-    <h2>Paris</h2>
-    <ul class="parisOutput"></ul>
-</div>
+    <div>
+        <h2>Paris</h2>
+        <ul class="parisOutput"></ul>
+        <ul class="totalCookies1"></ul>
+    </div>
 
-<div>
-    <h2>Lima</h2>
-    <ul class="limaOutput">  
-    </ul>
-    <ul class="totalCookies"></ul>
+    <div>
+        <h2>Lima</h2>
+        <ul class="limaOutput"> </ul>
+        <ul class="totalCookies"></ul>
 
-</div>
+    </div>
 
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
