--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="Fish displayed horizontally with its mouth open colors salmon pink and burnt orange.">
    
 
-    
+    <p><a href="sales.html">Sales Page</a></p>
 </body>
 </html>
