--- a/sales.html
+++ b/sales.html
@@ -11,36 +11,45 @@
 
 <body>
     <div>
-        <h2>Seattle</h2>
+        <h2></h2>
         <ul class="seattleOutput">
         </ul>
         <ul class="totalCookies4"></ul>
     </div>
     <div>
-        <h2>Tokyo</h2>
+        <h2></h2>
         <ul class="tokyoOutput">
         </ul>
         <ul class="totalCookies3"></ul>
     </div>
     <div>
-        <h2>Dubai</h2>
+        <h2></h2>
         <ul class="dubaiOutput">
         </ul>
         <ul class="totalCookies2"></ul>
     </div>
 
     <div>
-        <h2>Paris</h2>
+        <h2></h2>
         <ul class="parisOutput"></ul>
         <ul class="totalCookies1"></ul>
     </div>
 
     <div>
-        <h2>Lima</h2>
+        <h2></h2>
         <ul class="limaOutput"> </ul>
         <ul class="totalCookies"></ul>
 
     </div>
+
+
+    <table id="body">
+        <th id="head"></th>
+
+    </table>
+    <tr>
+        <th></th>
+    </tr>
 
     <script src="app.js"></script>
 </body>
