--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Patricia's Cookies</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Salmon Cookies</h1>
-    <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="Fish displayed horizontally with its mouth open colors salmon pink and burnt orange.">
-   
 
-    <p><a href="sales.html">Sales Page</a></p>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li>About</li>
+                <li>Shop</li>
+                <li>Contact Us</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Patricia's Salmon Cookies</h1>
+        <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png"
+            alt="Fish displayed horizontally with its mouth open colors salmon pink and burnt orange.">
+
+
+
+
+        <p><a href="sales.html">Sales Page</a></p>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
