--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patricia's Cookies</title>
     <link rel="stylesheet" href="reset.css">
+    <link href='https://fonts.googleapis.com/css?family=Alfa Slab One' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,18 +18,32 @@
                 <li>About</li>
                 <li>Shop</li>
                 <li>Contact Us</li>
+                <li>Locations</li>
             </ul>
         </nav>
     </header>
     <main>
         <h1>Patricia's Salmon Cookies</h1>
-        <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png"
-            alt="Fish displayed horizontally with its mouth open colors salmon pink and burnt orange.">
+
+<section>
+    <p class="para"><strong>Patricia's Salmon Cookies</strong> is a family owned business with international locations. Combining a love of salmon and savory baked goods we offer a case full of our well known salmon cookies to satisfy your craving for and serves as a great snack for our fish friends. You read correctly, these cookies are one of a kind and can be fed to fish of all kind.  </p>
+</section>
+
+<div><h3>Locations</h3>
+<p>Seattle, Washington</p>
+<li>Hours: 6am - 8pm M-F</li>
+<p>Lima, Peru</p>
+<li>Hours: 6am - 8pm M-F</li>
+<p>Tokyo, Japan</p>
+<li>Hours: 6am - 8pm M-F</li>
+<p>Dubai, United Arab Emirates</p>
+<li>Hours: 6am - 8pm M-F</li>
+<p>Paris, France</p>
+<li>Hours: 6am - 8pm M-F</li>
+</div>
 
 
-
-
-        <p><a href="sales.html">Sales Page</a></p>
+        <p><a href="sales.html">For Our Investors</a></p>
     </main>
     <footer></footer>
 </body>
