--- a/sales.html
+++ b/sales.html
@@ -12,36 +12,8 @@
 
 <body>
     <div>
-        <h2></h2>
-        <ul class="seattleOutput">
-        </ul>
-        <ul class="totalCookies4"></ul>
-    </div>
-    <div>
-        <h2></h2>
-        <ul class="tokyoOutput">
-        </ul>
-        <ul class="totalCookies3"></ul>
-    </div>
-    <div>
-        <h2></h2>
-        <ul class="dubaiOutput">
-        </ul>
-        <ul class="totalCookies2"></ul>
-    </div>
-
-    <div>
-        <h2></h2>
-        <ul class="parisOutput"></ul>
-        <ul class="totalCookies1"></ul>
-    </div>
-
-    <div>
-        <h2></h2>
-        <ul class="limaOutput"> </ul>
-        <ul class="totalCookies"></ul>
-
-    </div>
+        <h2>Here's a glimpse at our hourly and daily sales across all locations</h2>
+       
 
 
     <table id="body">
