--- a/index.html
+++ b/index.html
@@ -22,29 +22,42 @@
             </ul>
         </nav>
     </header>
+    <h1>Patricia's Salmon Cookies</h1>
     <main>
-        <h1>Patricia's Salmon Cookies</h1>
 
 <section>
     <p class="para"><strong>Patricia's Salmon Cookies</strong> is a family owned business with international locations. Combining a love of salmon and savory baked goods we offer a case full of our well known salmon cookies to satisfy your craving for and serves as a great snack for our fish friends. You read correctly, these cookies are one of a kind and can be fed to fish of all kind.  </p>
+<img src="\family.jpg" class="family"/> 
 </section>
 
-<div><h3>Locations</h3>
-<p>Seattle, Washington</p>
+<h3>Locations</h3>
+<div>
+<p><strong>Seattle, Washington</strong></p>
 <li>Hours: 6am - 8pm M-F</li>
-<p>Lima, Peru</p>
+<p><strong>Lima, Peru</strong></p>
 <li>Hours: 6am - 8pm M-F</li>
-<p>Tokyo, Japan</p>
+<p><strong>Tokyo, Japan</strong></p>
 <li>Hours: 6am - 8pm M-F</li>
-<p>Dubai, United Arab Emirates</p>
+<p><strong>Dubai, United Arab Emirates</strong></p>
 <li>Hours: 6am - 8pm M-F</li>
-<p>Paris, France</p>
+<p><strong>Paris, France</strong></p>
 <li>Hours: 6am - 8pm M-F</li>
 </div>
 
 
         <p><a href="sales.html">For Our Investors</a></p>
     </main>
+    <h3>Shop with us!</h3>
+    <container class="container">
+        <h4>Frosted Salmon Cookie</h4>
+        <h4>Salmon Cookie Cutter</h4>
+        <h4>Salmon Tee</h4>
+    </container> 
+    <div class="shopimages">
+        <img src="frosted-cookie.jpg"/>
+        <img src="cutter.jpg"/>
+        <img src="shirt.jpg"/>
+    </div>
     <footer></footer>
 </body>
 
