--- a/sales.html
+++ b/sales.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="sales">
         <h2>Here's a glimpse at our hourly and daily sales across all locations</h2>
        
 
@@ -23,6 +23,7 @@
     <tr>
         <th></th>
     </tr>
+    </div>
 
     <script src="app.js"></script>
 </body>
