--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <section>
     <p class="para"><strong>Patricia's Salmon Cookies</strong> is a family owned business with international locations. Combining a love of salmon and savory baked goods we offer a case full of our well known salmon cookies to satisfy your craving for and serves as a great snack for our fish friends. You read correctly, these cookies are one of a kind and can be fed to fish of all kind.  </p>
-<img src="\family.jpg" class="family"/> 
+<img src="family.jpg" class="family"/> 
 </section>
 
 <h3>Locations</h3>
