--- a/sales.html
+++ b/sales.html
@@ -18,6 +18,7 @@
 
         <table id="body">
             <th id="head"></th>
+            <tfoot id="foot"></tfoot>
 
         </table>
     </div>
@@ -25,10 +26,22 @@
     <form id = "form">
         <ul>
           <li>
-            <label for="location">Location:</label>
-            <input type="text" id="location" label="location" />
-            <button id="newLocation" type="submit">Render Location</button>
+            <label for="min">New Minimum:</label>
+            <input type="number" id="minimum" label="min" />
           </li>
+          <li>
+            <label for="max">New Maximum:</label>
+            <input type="number" id="maximum" label="max" />
+          </li>
+          <li>
+            <label for="avg">New Average:</label>
+            <input type="number" id="avg" label="avg" />
+          </li>
+          <li>
+            <label for="location">New Location:</label>
+            <input type="text" id="location" label="location" />
+          </li>
+          <li><button id="newLocation" type="submit">Render Location</button></li>
         </ul>
             
             
