--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     <header>
         <nav>
             <ul>
-                <li>About</li>
-                <li>Shop</li>
-                <li>Contact Us</li>
-                <li>Locations</li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#shop">Shop</a></li>
+                <li><a href="#loca">Contact Us</a></li>
+                <li><a href="sales.html">Sales</a></li>
             </ul>
         </nav>
     </header>
     <h1>Patricia's Salmon Cookies</h1>
     <main>
 
-<section>
+<section id="about">
     <p class="para"><strong>Patricia's Salmon Cookies</strong> is a family owned business with international locations. Combining a love of salmon and savory baked goods we offer a case full of our well known salmon cookies to satisfy your craving for and serves as a great snack for our fish friends. You read correctly, these cookies are one of a kind and can be fed to fish of all kind.  </p>
 <img src="family.jpg" class="family"/> 
 </section>
 
-<h3>Locations</h3>
+<h3 id="loca">Locations</h3>
 <div>
 <p><strong>Seattle, Washington</strong></p>
 <li>Hours: 6am - 8pm M-F</li>
@@ -47,7 +47,7 @@
 
         <p><a href="sales.html">For Our Investors</a></p>
     </main>
-    <h3>Shop with us!</h3>
+    <h3 id="shop">Shop with us!</h3>
     <container class="container">
         <h4>Frosted Salmon Cookie</h4>
         <h4>Salmon Cookie Cutter</h4>
