--- a/sales.html
+++ b/sales.html
@@ -27,20 +27,20 @@
     <fieldset>
       <ul>
         <li>
-          <label for="location">New Location:</label>
-          <input type="text" id="location" label="location" />
+          <label for="location"></label>
+          <input type="text" id="location" label="location" placeholder="Location" />
         </li>
         <li>
-          <label for="min">New Minimum:</label>
-          <input type="number" id="minimum" label="min" />
+          <label for="min"></label>
+          <input type="number" id="minimum" label="min" placeholder="Minimum"/>
         </li>
         <li>
-          <label for="max">New Maximum:</label>
-          <input type="number" id="maximum" label="max" />
+          <label for="max"></label>
+          <input type="number" id="maximum" label="max" placeholder="Maximum"/>
         </li>
         <li>
-          <label for="avg">New Average:</label>
-          <input type="number" id="avg" label="avg" />
+          <label for="avg"></label>
+          <input type="number" id="avg" label="avg" placeholder="Average"/>
         </li>
         <li><button id="newLocation" type="submit">Render Location</button></li>
       </ul>
